--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 
-<body id="page-top" style="overflow-y: hidden;">
+<body id="page-top" style="overflow-y: hidden;" onload="llenar()">
     <div id="wrapper">
         <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-end sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius: 10px;border-bottom-right-radius: 10px;background: #eb7e20;">
            
@@ -85,12 +85,10 @@
                         <div class="mb-3" style="font-family: 'hedliner', sans-serif;">
                             <p style="font-size: 20px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: 'hedliner', sans-serif;">Duración del Estudio</p><input class="form-control" type="text" id="DuracionEstudioTXT" name="bservaciones Importantes" placeholder="Duracion del Estudio" style="font-family: 'hedliner', sans-serif;">
                         </div>
-                        <div class="mb-3" style="font-family: 'hedliner', sans-serif;">
-                            <p style="font-size: 20px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: 'hedliner', sans-serif;">Resumen de las Preguntas</p><textarea class="form-control" id="ResumenPreguntasTXT" name="message" rows="6" placeholder="Resumen de las preguntas" style="height: 107px;font-family: 'hedliner', sans-serif;"></textarea>
-                        </div>
+                        
                         <div class="mb-3" style="font-family: 'hedliner', sans-serif;">
                             <p style="font-size: 20px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: 'hedliner', sans-serif;">Transcripciones</p>
-                            <p id="NombreArchivoLBL" style="font-size: 17px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: 'hedliner', sans-serif;">Nombresdelosarchivos.csv</p>
+                            <p id="NombreArchivoLBL" style="font-size: 17px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: 'hedliner', sans-serif;">Archivos.csv</p>
                             <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-end" style="width: 25%;margin-top: 10px;font-family: 'hedliner', sans-serif;"><button class="btn btn-primary d-block w-100" id="DescargarTranscrptBtn" type="submit" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-right: 10px;margin-bottom: 10px;font-family: 'hedliner', sans-serif;">Descargar Transcripciones</button></div>
                         </div>
                     </form>
@@ -102,6 +100,7 @@
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="js/Script_CheckSession.js"></script>
+    <script src="js/script_InfoEstudio.js"></script>
 </body>
 
 </html>
