--- a/Modulo Analisis De Datos/Overview.html
+++ b/Modulo Analisis De Datos/Overview.html
@@ -34,14 +34,19 @@
                 
                 <ul id="accordionSidebar" class="navbar-nav text-light" style="font-family: hedliner;">
                     <li class="nav-item" style="font-family: hedliner">
-                        <a class="nav-link" href="https://www.cheetah-research.ai/analysis/MainPage/">
+                        <a class="nav-link" href="https://www.cheetah-research.ai/analysis/home/">
                             <i class="fas fa-window-maximize" style="font-size: 20px;color: var(--bs-CR-orange);"></i>
                             <span style="font-family: hedliner;">PAGINA PRINCIPAL</span>
                         </a>
                     </li>
                     
                     <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="https://www.cheetah-research.ai/analysis/DataAnalysis/"><i class="far fa-chart-bar" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;" >ANALISIS DE DATOS</span></a></li>
-                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="https://www.cheetah-research.ai/analysis/Socrates/"><i class="far fa-comments" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;" >SOCRATES 🔎</span></a></li>
+                    <li class="nav-item" style="font-family: hedliner">
+                        <a id="socrates-link" class="nav-link" href="#">
+                            <i class="far fa-comments" style="font-size: 20px;color: var(--bs-CR-orange);"></i>
+                            <span style="font-family: hedliner;">SOCRATES 🔎</span>
+                        </a>
+                    </li>
                 </ul>
 
             </div>
@@ -56,6 +61,11 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script>
+        var study_id = localStorage.getItem('selectedStudyId');
+        var link = document.getElementById('socrates-link');
+        link.href = 'https://www.cheetah-research.ai/analysis/Socrates?id=' + id;
+    </script>
 </body>
 
 </html>
