--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -32,28 +32,37 @@
     <div id="wrapper">
         <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius:0px;border-bottom-right-radius: 0px;background: var(--bs-CR-black-dark);">
             <div class="container-fluid d-flex flex-column p-0">
-                <a class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="https://www.cheetah-research.ai/analysis/MainPage/" >
+                <a class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="https://www.cheetah-research.ai/analysis/home/" >
                     <img style="height: auto;width: 230px;margin: -11px;margin-bottom: 0px; margin-top: 10px;" src="assets/img/NegroLogo.png" />
                 </a>
                 <div style="height: 30px;"></div>
                 
                 <ul id="accordionSidebar" class="navbar-nav text-light" style="font-family: hedliner;">
                     <li class="nav-item" style="font-family: hedliner">
-                        <a class="nav-link" href="https://www.cheetah-research.ai/analysis/MainPage/">
+                        <a class="nav-link" href="https://www.cheetah-research.ai/analysis/data/">
                             <i class="fas fa-window-maximize" style="font-size: 20px;color: var(--bs-CR-orange);"></i>
                             <span style="font-family: hedliner;">PAGINA PRINCIPAL</span>
                         </a>
                     </li>
-                    
-                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="https://www.cheetah-research.ai/analysis/DataAnalysis/"><i class="far fa-chart-bar" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;" >ANALISIS DE DATOS</span></a></li>
-                    <li class="nav-item" style="font-family: hedliner"><a class="nav-link" href="https://www.cheetah-research.ai/analysis/Socrates/"><i class="far fa-comments" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;" >SOCRATES 🔎</span></a></li>
+
+                    <li class="nav-item" style="font-family: hedliner">
+                        <a id="analis-link" class="nav-link" href="#">
+                            <i class="far fa-chart-bar" style="font-size: 20px;color: var(--bs-CR-orange);"></i><span style="font-family: hedliner;" >ANALISIS DE DATOS</span>
+                        </a>
+                    </li>
+                    <li class="nav-item" style="font-family: hedliner">
+                        <a id="socrates-link" class="nav-link" href="#">
+                            <i class="far fa-comments" style="font-size: 20px;color: var(--bs-CR-orange);"></i>
+                            <span style="font-family: hedliner;">SOCRATES 🔎</span>
+                        </a>
+                    </li>
                 </ul>
 
             </div>
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
-                <div class="card" id="contentCard_PaginaAnalisiDatos" style="margin: 0px; height: 1000px ;max-height: calc(100vh - 0px); overflow-y: auto; padding: 10px;">
+                <div class="card" id="contentCard_PaginaAnalisiDatos" style="mafrgin: 0px; height: 1000px ;max-height: calc(100vh - 0px); overflow-y: auto; padding: 10px;">
 
                     <div class="row" style="height: 95vh;">
                         <div class="col-lg-4" style="background: var(--bs-list-group-active-border-color); ">
@@ -207,6 +216,13 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
+        <script>
+            var study_id = localStorage.getItem('selectedStudyId');
+            var link = document.getElementById('socrates-link');
+            var link2 = document.getElementById('analis-link');
+            link.href = 'https://www.cheetah-research.ai/analysis/Socrates?id=' + study_id;
+            link2.href = 'https://www.cheetah-research.ai/analysis/DataAnalysis/?id=' + study_id;
+        </script>
 </body>
 
 </html>
