filters, modules y user persona por alguna razon

--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -62,7 +62,7 @@
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
-                <div class="card" id="contentCard_PaginaAnalisiDatos" style="mafrgin: 0px; height: 1000px ;max-height: calc(100vh - 0px); overflow-y: auto; padding: 10px;">
+                <div class="card" id="contentCard_PaginaAnalisiDatos" style="margin: 0px; height: 1000px ;max-height: calc(100vh - 0px); overflow-y: auto; padding: 10px;">
 
                     <div class="row" style="height: 95vh;">
                         <div class="col-lg-4" style="background: var(--bs-list-group-active-border-color); ">
