--- a/Modulo Analisis De Datos/Overview.html
+++ b/Modulo Analisis De Datos/Overview.html
@@ -66,7 +66,7 @@
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
     <script>
-        var study_id = localStorage.getItem('selectedStudyId');
+        var study_id = URLSearchParams(window.location.search).get('id');
         var link = document.getElementById('socrates-link');
         var link2 = document.getElementById('analis-link');
         link.href = 'https://www.cheetah-research.ai/analysis/Socrates?id=' + study_id;
