--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/Hover.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
-    <script src="./Funcionalidad/AnalisisDeDatos.js"></script>
+    <script src="Funcionalidad/AnalisisDeDatos.js"></script>
     <style>
         @media (max-width: 1000px) {
             img {
@@ -217,7 +217,11 @@
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
         <script>
-            var study_id = localStorage.getItem('selectedStudyId');
+            function getParameterByName(name) {
+                const urlParams = new URLSearchParams(window.location.search);
+                return urlParams.get(name);
+            }
+            const studyId = getParameterByName('id');
             var link = document.getElementById('socrates-link');
             var link2 = document.getElementById('analis-link');
             link.href = 'https://www.cheetah-research.ai/analysis/Socrates?id=' + study_id;
