--- a/Modulo Analisis De Datos/ConversaContuData.html
+++ b/Modulo Analisis De Datos/ConversaContuData.html
@@ -154,7 +154,11 @@
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
     <script>
-        var study_id = URLSearchParams(window.location.search).get('id');
+        function getParameterByName(name) {
+            const urlParams = new URLSearchParams(window.location.search);
+            return urlParams.get(name);
+        }
+        const studyId = getParameterByName('id');
         var link = document.getElementById('socrates-link');
         var link2 = document.getElementById('analis-link');
         link.href = 'https://www.cheetah-research.ai/analysis/Socrates?id=' + study_id;
