--- a/Modulo Analisis De Datos/Overview.html
+++ b/Modulo Analisis De Datos/Overview.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/custom-styles.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
     <link rel="stylesheet" href="assets/css/Hover.css">
-    <script src="./Funcionalidad/PaginaPrincipal.js"></script>
+
     <style>
         @media (max-width: 1080px) {
             .img {
@@ -66,7 +66,11 @@
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/theme.js"></script>
     <script>
-        var study_id = URLSearchParams(window.location.search).get('id');
+        function getParameterByName(name) {
+            const urlParams = new URLSearchParams(window.location.search);
+            return urlParams.get(name);
+        }
+        const studyId = getParameterByName('id');
         var link = document.getElementById('socrates-link');
         var link2 = document.getElementById('analis-link');
         link.href = 'https://www.cheetah-research.ai/analysis/Socrates?id=' + study_id;
