links home fixed

--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -32,7 +32,7 @@
     <div id="wrapper">
         <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius:0px;border-bottom-right-radius: 0px;background: var(--bs-CR-black-dark);">
             <div class="container-fluid d-flex flex-column p-0">
-                <a class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="https://www.cheetah-research.ai/analysis/home/" >
+                <a id="home-link" class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="#" >
                     <img style="height: auto;width: 230px;margin: -11px;margin-bottom: 0px; margin-top: 10px;" src="assets/img/NegroLogo.png" />
                 </a>
                 <div style="height: 30px;"></div>
@@ -224,8 +224,12 @@
             const studyId = getParameterByName('id');
             var link = document.getElementById('socrates-link');
             var link2 = document.getElementById('analis-link');
-            link.href = 'https://www.cheetah-research.ai/analysis/Socrates?id=' + study_id;
-            link2.href = 'https://www.cheetah-research.ai/analysis/DataAnalysis/?id=' + study_id;
+            var link3 = document.getElementById('home-link');
+            var link4 = document.getElementById('home-link2');
+            link.href = 'https://www.cheetah-research.ai/analysis/Socrates?id=' + studyId;
+            link2.href = 'https://www.cheetah-research.ai/analysis/DataAnalysis/?id=' + studyId;
+            link3.href = 'https://www.cheetah-research.ai/analysis/home/?id=' + studyId;
+            link4.href = 'https://www.cheetah-research.ai/analysis/home/?id=' + studyId;
         </script>
 </body>
 
