Overflow hidden de contenedor del Chat

--- a/Modulo Analisis De Datos/ConversaContuData.html
+++ b/Modulo Analisis De Datos/ConversaContuData.html
@@ -92,7 +92,7 @@
         </nav>
 
         <div class="d-flex flex-column" id="content-wrapper">
-            <div class="card" id="contentCard_PaginaConversaConTuData" style="margin: 10px; height: 100%; overflow-y: auto; background: url(&quot;assets/img/Main%20BG.png&quot;) center / cover;">
+            <div class="card" id="contentCard_PaginaConversaConTuData" style="margin: 10px; height: 100%; overflow-y: hidden; background: url(&quot;assets/img/Main%20BG.png&quot;) center / cover;">
 
                 <div id="overlay" style="display: flex;">
         
