--- a/Modulo De config/ConfirmPassword.html
+++ b/Modulo De config/ConfirmPassword.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="assets/css/Toggle-Switch.css">
     <link rel="stylesheet" href="assets/css/Toggle-Switches.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
+
+    <link rel="stylesheet" href="assets/assets_accounts/css/Hover.css">
+    <link rel="stylesheet" href="assets/assets_accounts/css/Responsiveness.css">
 </head>
 
 <body class="bg-gradient-primary" style="background: var(--bs-primary);">
@@ -30,20 +33,20 @@
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h4 class="text-dark mb-2" style="font-family: 'hedliner', sans-serif;">Confirma tu contraseña</h4>
-                                        <p class="mb-4" style="font-family: 'hedliner', sans-serif;">Es bueno verte de vuelta, crea una contraseña nueva y continua trabajando</p>
+                                        <h4 class="text-dark mb-2" style="font-family: hedliner;">Confirma tu contraseña</h4>
+                                        <p class="mb-4" style="font-family: hedliner;">Es bueno verte de vuelta, crea una contraseña nueva y continua trabajando</p>
                                     </div>
-                                    <form class="user" style="font-family: 'hedliner', sans-serif;" id="resetPasswordFormConfirm">
-                                        <div class="mb-3" style="font-family: 'hedliner', sans-serif;">
-                                            <input class="form-control form-control-user" type="password" id="ConfirmPassword01" aria-describedby="emailHelp" placeholder="Ingresa tu contraseña nueva" name="password" style="font-family: 'hedliner', sans-serif;">
-                                            <input class="form-control form-control-user" type="password" id="ConfirmPassword02" aria-describedby="emailHelp" placeholder="Confirma tu contraseña" name="password" style="font-family: 'hedliner', sans-serif;">
+                                    <form class="user" style="font-family: hedliner;" id="resetPasswordFormConfirm">
+                                        <div class="mb-3" style="font-family: hedliner;">
+                                            <input class="form-control form-control-user" type="password" id="ConfirmPassword01" aria-describedby="emailHelp" placeholder="Ingresa tu contraseña nueva" name="password" style="font-family:IBM Plex Sans;">
+                                            <input class="form-control form-control-user" type="password" id="ConfirmPassword02" aria-describedby="emailHelp" placeholder="Confirma tu contraseña" name="password" style="font-family:IBM Plex Sans;">
                                         </div>
-                                        <button class="btn btn-primary d-block btn-user w-100" type="submit" style="font-family: 'hedliner', sans-serif;">Restablecer Contraseña</button>
+                                        <button class="btn btn-primary d-block btn-user w-100" type="submit" style="font-family: hedliner;">Restablecer Contraseña</button>
                                     </form>
-                                    <div class="text-center" style="font-family: 'hedliner', sans-serif;">
-                                        <hr style="font-family: 'hedliner', sans-serif;">
+                                    <div class="text-center" style="font-family: hedliner;">
+                                        <hr style="font-family: hedliner;">
                                     </div>
-                                    <div class="text-center" style="font-family: 'hedliner', sans-serif;"><a class="small" href="https://www.cheetah-research.ai/login/" style="font-family: 'hedliner', sans-serif;">Login</a></div>
+                                    <div class="text-center" style="font-family: hedliner;"><a class="small" href="https://www.cheetah-research.ai/login/" style="font-family: hedliner;">Login</a></div>
                                 </div>
                             </div>
                         </div>
