--- a/Modulo De config/forgot-password.html
+++ b/Modulo De config/forgot-password.html
@@ -16,15 +16,13 @@
     <link rel="stylesheet" href="assets/assets_accounts/css/LineAwesome.css">
     <link rel="stylesheet" href="assets/assets_accounts/fonts/line-awesome.min.css">
     <link rel="stylesheet" href="assets/assets_accounts/css/Features-Small-Icons-icons.css">
-
-    <link rel="stylesheet" href="assets/assets_accounts/css/untitled.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
 
     <link rel="stylesheet" href="assets/assets_accounts/css/Hover.css">
     <link rel="stylesheet" href="assets/assets_accounts/css/Responsiveness.css">
 </head>
 
-<body class="d-flex justify-content-center align-items-center bg-gradient-primary" style="width:100%;height:100%;background:#C0601C;">
+<body class="d-flex justify-content-center align-items-center bg-gradient-primary" style="width:100%;height:100%;background:var(--bs-CR-orange);">
     <div class="container" style="z-index: 1;position: absolute;">
         <div class="row justify-content-center">
             <div class="col-md-9 col-lg-12 col-xl-10">
@@ -37,17 +35,17 @@
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h4 class="text-dark mb-2" style="font-family:'hedliner', sans-serif;">¿Olvidaste tu Contraseña?</h4>
-                                        <p class="mb-4" style="font-family:'hedliner', sans-serif; font-size: small;">Es entendible, esas cosas pasan. Ingresa tu email en el espacio de abajo y te enviaremos un link para restablecerla.&nbsp;</p>
+                                        <h4 class="text-dark mb-2" style="font-family:hedliner;">¿Olvidaste tu Contraseña?</h4>
+                                        <p class="mb-4" style="font-family:IBM Plex Sans; font-size: small;">Es entendible, esas cosas pasan. Ingresa tu email en el espacio de abajo y te enviaremos un link para restablecerla.&nbsp;</p>
                                     </div>
-                                    <p class="text-center" id="Error-PasswordReset" style="font-size:0.9rem;margin-left:0px;margin-bottom:5px;font-family:'hedliner', sans-serif;text-decoration:underline;color:red;display:none;"> Error al enviar solicitud</p>
-                                    <form class="user" style="font-family:'hedliner', sans-serif;" id="passwordResetForm">
-                                        <div class="mb-3" style="font-family:'hedliner', sans-serif;"><input class="form-control form-control form-control form-control form-control-user" type="email" aria-describedby="emailHelp" id="InputEmail" name="email" placeholder="Ingresa tu direccion de Email" style="font-family:'hedliner', sans-serif;"></div><button class="btn btn-primary d-block btn-user w-100" type="submit" style="font-family:'hedliner', sans-serif;">Restablecer Contraseña</button>
+                                    <p class="text-center" id="Error-PasswordReset" style="font-size:0.9rem;margin-left:0px;margin-bottom:5px;font-family:hedliner;text-decoration:underline;color:red;display:none;"> Error al enviar solicitud</p>
+                                    <form class="user" style="font-family:hedliner;" id="passwordResetForm">
+                                        <div class="mb-3" style="font-family:hedliner;"><input class="form-control form-control form-control form-control form-control-user" type="email" aria-describedby="emailHelp" id="InputEmail" name="email" placeholder="Ingresa tu direccion de Email" style="font-family:IBM Plex Sans;"></div><button class="btn btn-primary d-block btn-user w-100" type="submit" style="font-family:hedliner;">Restablecer Contraseña</button>
                                     </form>
-                                    <div class="text-center" style="font-family:'hedliner', sans-serif;">
-                                        <hr style="font-family:'hedliner', sans-serif;"><a class="small" href="https://www.cheetah-research.ai/signup/" style="font-family:'hedliner', sans-serif;">¡Crear una Cuenta!</a>
+                                    <div class="text-center" style="font-family:hedliner;">
+                                        <hr style="font-family:hedliner;"><a class="small" href="https://www.cheetah-research.ai/signup/" style="font-family:hedliner;">¡Crear una Cuenta!</a>
                                     </div>
-                                    <div class="text-center" style="font-family:'hedliner', sans-serif;"><a class="small" href="https://www.cheetah-research.ai/login/" style="font-family:'hedliner', sans-serif;">¿Ya tienes una cuenta? Ingresa aquí</a></div>
+                                    <div class="text-center" style="font-family:hedliner;"><a class="small" href="https://www.cheetah-research.ai/login/" style="font-family:hedliner;">¿Ya tienes una cuenta? Ingresa aquí</a></div>
                                 </div>
                             </div>
                         </div>
@@ -59,12 +57,12 @@
     <div class="container flex-column justify-content-center align-items-center align-content-center" id="Reset-Cont" style="z-index: 2;width: 100%;height: 100%;position: relative;padding: 0px;backdrop-filter: blur(3px);-webkit-backdrop-filter: blur(3px);border-radius: 10px;overflow: hidden;border-style: none;display: none;">
         <div class="shadow-lg d-flex flex-column justify-content-center align-items-center align-content-center" style="width:50%;height:350px;border-radius:10px;overflow:hidden;">
             <div class="row" style="width:100%;height:55%;background:#072934e9;">
-                <div class="col d-flex justify-content-center align-items-center align-content-center" style="background:transparent;"><i class="la la-envelope" style="font-size:8rem;color:#C0601C;"></i></div>
+                <div class="col d-flex justify-content-center align-items-center align-content-center" style="background:transparent;"><i class="la la-envelope" style="font-size:8rem;color:var(--bs-CR-orange);"></i></div>
             </div>
-            <div class="row" style="width:100%;height:45%;background:#C0601C;">
+            <div class="row" style="width:100%;height:45%;background:var(--bs-CR-orange);">
                 <div class="col d-flex flex-column justify-content-center align-items-center align-content-center">
-                    <h1 style="font-family:'hedliner', sans-serif;color:#2e3e43;margin-bottom:10px;">¡Listo! </h1>
-                    <p class="fw-normal text-center d-flex" style="font-family:'hedliner', sans-serif;color:#ffffff;margin-bottom:5px;">El correo para restablecer su contraseña ha sido enviado</p><a id="Link-Login" href="#">Regresar al Login</a>
+                    <h1 style="font-family:hedliner;color:#2e3e43;margin-bottom:10px;">¡Listo! </h1>
+                    <p class="fw-normal text-center d-flex" style="font-family:hedliner;color:#ffffff;margin-bottom:5px;">El correo para restablecer su contraseña ha sido enviado</p><a id="Link-Login" href="#">Regresar al Login</a>
                 </div>
             </div>
         </div>
