--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -60,7 +60,7 @@
         <div class="row d-flex flex-column justify-content-center align-content-center" style="height: 100%;">
             <div class="col d-flex flex-column justify-content-center align-content-center" style="height: 100%;padding-right: 8px;padding-left: 8px;padding-top: 0px;margin-left: 15px;">
                 <h1 class="fw-semibold d-flex flex-row align-items-center order-1" id="Bot-Name" style="margin: 0px;font-family: hedliner;margin-top: 6px;color: #aaa7aa;">Coso Bot</h1>
-                <p class="fw-normal d-flex flex-row order-2" id="Bot-Status" style="margin: 0px;padding-left: 4px;margin-top: -2px;color: var(--bs-CR-gray);">En línea</p>
+                <p class="fw-normal d-flex flex-row order-2" id="Bot-Status" style="margin: 0px;padding-left: 4px;margin-top: -2px;color: var(--bs-CR-orange-2);">En línea</p>
             </div>
         </div>
     </div>
