--- a/Modulo De config/HerramientasDelAdministrador.html
+++ b/Modulo De config/HerramientasDelAdministrador.html
@@ -82,7 +82,7 @@
 
                         </optgroup>
                     </select>
-                    <button class="btn btn-primary" type="button" style="margin: 0px;width: 25vh;margin-left: 10px;background: #e8112d;font-weight: bold;border-color: #e8112d;font-family: 'hedliner', sans-serif;">Eliminar Estudio</button>
+                    <button class="btn btn-primary" type="button" style="margin: 0px;width: 25vh;margin-left: 10px;background: #e8112d;font-weight: bold;border-color: #e8112d;font-family: 'hedliner', sans-serif;"onclick="eliminarEstudio()">Eliminar Estudio</button>
                 </div>
             </div>
         </div>
@@ -94,6 +94,7 @@
     <script src="js/Script_ConcederAcceso.js"></script>
     <script src="js/Script_CheckSession.js"></script>
     <script src="js/Script_ObtenerEstudios.js"></script>
+    <script src="js/Script_EliminarEstudio.js"></script>
 </body>
 
 </html>
