creacion de updates y mejoras en la visualizacion

--- a/Modulo De config/LanzarEstudio.html
+++ b/Modulo De config/LanzarEstudio.html
@@ -154,7 +154,7 @@
 
                         <div style="height: 5px;background: var(--bs-primary);margin-top: 24px;margin-bottom: 14px;border-radius: 5px;"></div>
                         <div style="margin-top: 10px;margin-bottom: 24px;">
-                            <p style="font-size: 20px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: hedlinerñ">Modalidad de Testing</p>
+                            <p style="font-size: 20px;color: var(--bs-emphasis-color);margin-bottom: 5px;font-family: hedliner">Modalidad de Testing</p>
                             <label class="switch">
                                 <input type="checkbox" id="test_Switch"/>
                                 <span class="slider round"></span>
