--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -102,7 +102,7 @@
                                     <select id="ComboBox_ResumenIndividualTy" style="font-family: hedliner;">
                                         <!-- se agregan opciones narrative y factual-->
                                         <option value="---">---</option>
-                                        <option value="narrative">Narrativo</option>
+                                        <option value="individual_narrative">Narrativo</option>
                                         <option value="percentage">Porcentual</option>
                                     </select>     
     
