--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -116,7 +116,7 @@
                                 <select id="ComboBox_ResumenIndividualTy" style="font-family: hedliner;">
                                     <!-- se agregan opciones narrative y factual-->
                                     <option value="---">---</option>
-                                    <option value="narrative">Narrativo</option>
+                                    <option value="individual_narrative">Narrativo</option>
                                     <option value="percentage">Porcentual</option>
                                 </select>     
 
@@ -231,7 +231,7 @@
 
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </div>
