--- a/Modulo Analisis De Datos/Overview.html
+++ b/Modulo Analisis De Datos/Overview.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="assets/css/Hover.css">
     <script src="Funcionalidad/PaginaPrincipal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
+
 
     <style>
         @media (max-width: 1080px) {
