--- a/Modulo Analisis De Datos/Overview.html
+++ b/Modulo Analisis De Datos/Overview.html
@@ -62,7 +62,7 @@
 
         <div class="d-flex flex-column" id="content-wrapper">
             <div class="card" id="contentCard_PaginaOverviewCont" style="margin: 0px; height: 1000px ;max-height: calc(100vh - 0px); overflow-y: auto; padding: 10px;">
-                <div class="card rounded-3 text-white --bs-CR-orange" id="contentCard_PaginaOverview" style="padding: 10px;">
+                <div class="card rounded-3 text-white" id="contentCard_PaginaOverview" style="padding: 10px; background-color: #eb7e20;">
                     <!-- Content goes here -->
                 </div>
             </div>
