--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="assets/css/untitled.css">
 
     <link rel="stylesheet" href="assets/assets_accounts/css/Hover.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 
     <style>
         /*media query para que desaparezca el img si el display no es hd+*/
