--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -73,13 +73,13 @@
         <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
                 <div class="card" id="contentCard_PaginaOverview" style="margin: 0px;height: calc(100vh - 0px);padding: 10px;overflow-y: scroll;">
-                    <h2 style="color: var(--bs-emphasis-color);font-weight: bold;font-family: hedliner;">Transcripcion de Encuestas</h2>
-                    <form class="p-3 p-xl-4" method="post" style="font-family: hedliner;">                    
-                        <div class="mb-3" style="font-family: hedliner;">
-                            <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-end" style="width: 25%;margin-top: 10px;font-family: hedliner;"><button class="btn btn-primary d-block w-100" id="DescargarTranscrptBtn" type="submit" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-right: 10px;margin-bottom: 10px;font-family: hedliner;">Descargar Transcripciones</button></div>
+                    <h2 style="color: var(--bs-emphasis-color);font-weight: bold;font-family: hedliner;">Transcripción de Encuestas</h2>
+                    <div class="p-3 p-xl-4" style="font-family: hedliner;">
+                        <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-end" style="width: 25%;margin-top: 10px;font-family: hedliner;">
+                            <button class="btn btn-primary d-block w-100" id="DescargarTranscrptBtn" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-right: 10px;margin-bottom: 10px;font-family: hedliner;">Descargar Transcripciones</button>
                         </div>
-                    </form>
-                </div>
+                    </div>
+                </div>                
             </div>
         </div>
     </div>
