body es scrollable en y

--- a/Modulo De config/PaginaPrincipal.html
+++ b/Modulo De config/PaginaPrincipal.html
@@ -20,7 +20,13 @@
         .large-image {
     width: 550px; /* Ajusta el tamaño según tus necesidades */
     height: auto; /* Mantén la proporción de la imagen */
-}
+}   
+ /* que el body sea scrollable */
+    body {
+        overflow-y: scroll;
+    }
+
+    
     </style>
 </head>
 
