que la lista sea scrollable

--- a/Modulo De config/PaginaPrincipal.html
+++ b/Modulo De config/PaginaPrincipal.html
@@ -18,15 +18,13 @@
 
     <style>
         .large-image {
-    width: 550px; /* Ajusta el tamaño según tus necesidades */
-    height: auto; /* Mantén la proporción de la imagen */
-}   
- /* que el body sea scrollable */
-    body {
-        overflow-y: scroll;
-    }
+            width: 550px; /* Ajusta el tamaño según tus necesidades */
+            height: auto; /* Mantén la proporción de la imagen */
+        }   
 
-    
+        .list-group {
+            overflow-y: scroll;
+        }
     </style>
 </head>
 
