lo mismo que el anterior pero mejor hecho

--- a/Modulo De config/PaginaPrincipal.html
+++ b/Modulo De config/PaginaPrincipal.html
@@ -41,7 +41,7 @@
     <div class="card" id="contentCard_PaginaOverview" style="margin: 0px;height: 100vh;padding: 10px; border-radius: 3px;">
         <h1 style="color: var(--bs-body-bg);margin: 10px;background: var(--bs-primary);border-radius: 3px;padding: 05px;font-family: hedliner;">SELECCIONAR ESTUDIO</h1>
         
-        <div class="list-group" id="listgrouptudies" style="margin: 10px;font-family: hedliner;border-radius: 3px;">
+        <div class="list-group" id="listgrouptudies" style="margin: 10px;font-family: hedliner;border-radius: 3px; height: 95vh;">
 
         </div>
         
