--- a/Modulo Analisis De Datos/AnalisisDeDatos.html
+++ b/Modulo Analisis De Datos/AnalisisDeDatos.html
@@ -62,7 +62,7 @@
 
                     <div class="row" style="height: 95vh;">
                         <div class="col-lg-4" style="background: var(--bs-list-group-active-border-color); ">
-                            <div id="BAOColumn" class="d-xxl-flex justify-content-xxl-start align-items-xxl-center list-group" style="background: var(--bs-CR-black-dark);border-width: 20px;border-color: var(--bs-emphasis-color);height: 100%;padding-right: 10px;"><a class="d-xxl-flex align-items-xxl-center list-group-item list-group-item-action" href="#ResumenGeneral" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-family: hedliner, sans-serif;font-weight: bold;">Resumen General</a><a class="d-xxl-flex align-items-xxl-center list-group-item list-group-item-action" href="#ResumenIndividual" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-weight: bold;font-family: hedliner;">Resumen Individual</a><a class="d-xxl-flex align-items-xxl-center list-group-item list-group-item-action" href="#UserPersona" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-family: hedliner;font-weight: bold;">User Persona</a><a class="d-xxl-flex align-items-xxl-center list-group-item list-group-item-action" href="#AnalisisPsicograficos" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-family: hedliner;font-weight: bold;">Análisis Psicograficos</a><input type="text" id="PreguntaTXT-1" name="bservaciones Importantes" placeholder="Filtrar por..." style="width: 95%;height: 46px;margin: 10px;border-radius: 2px;border: 3px solid var(--bs-list-group-active-color);font-weight: bold;font-family: hedliner;">
+                            <div id="BAOColumn" class="d-xxl-flex justify-content-xxl-start align-items-xxl-center list-group" style="background: var(--bs-CR-black-dark);border-width: 20px;border-color: var(--bs-emphasis-color);height: 100%;padding-right: 10px;"><a class="d-xxl-flex align-items-xxl-center list-group-item list-group-item-action" href="#ResumenGeneral" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-family: hedliner, sans-serif;font-weight: bold;">Resumen General</a><a class="d-xxl-flex align-items-xxl-center list-group-item list-group-item-action" href="#ResumenIndividual" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-weight: bold;font-family: hedliner;">Resumen Individual</a><a class="d-xxl-flex align-items-xxl-center list-group-item list-group-item-action" href="#UserPersona" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-family: hedliner;font-weight: bold;">User Persona</a><a class="d-xxl-flex align-items-xxl-center list-group-item list-group-item-action" href="#AnalisisPsicograficos" data-bs-toggle="list" style="width: 95%;margin-right: 10px;margin-left: 10px;margin-top: 10px;border-radius: 2px;height: 46px;font-family: hedliner;font-weight: bold;">Análisis Psicograficos</a>
                                 <div style="height: 95%;"></div>
                             </div>
                         </div>
@@ -135,8 +135,6 @@
                                                     <p>En esta sección se presenta un análisis psicográfico basado en las respuestas escritas, utilizando el modelo de Ekman. Este análisis se desglosa en los siguientes aspectos:</p>
                                                     <ul>
                                                         <li><strong>Emociones Básicas:</strong> Se identifican y clasifican las emociones primarias reflejadas en el contenido textual.</li>
-                                                        <li><strong>Referencias a Expresiones Faciales:</strong> Se examinan las menciones o descripciones de expresiones faciales en las respuestas para inferir el estado emocional.</li>
-                                                        <li><strong>Lenguaje Corporal Implícito:</strong> Se interpretan indicios de lenguaje corporal sugeridos por el tono y la elección de palabras en las respuestas.</li>
                                                         <li><strong>Microexpresiones Textuales:</strong> Se detectan y analizan sutiles indicios emocionales que podrían estar presentes en la redacción, similares a las microexpresiones faciales.</li>
                                                     </ul>
     
@@ -213,8 +211,6 @@
     
                         </div>
                     </div>
-
-
                 </div>
             </div>
     </div>
