--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -75,7 +75,7 @@
         </nav>
 
         <div class="d-flex flex-column" id="content-wrapper">
-            <div class="card" id="contentCard_PaginaDetalleDeRespuesta" style="margin: 0px;height: 100%;padding: 10px;overflow-x: hidden;max-height: calc(100vh - 1px);overflow-y: hidden;">
+            <div class="card" id="contentCard_PaginaDetalleDeRespuesta" style="margin: 0px;height: 100%;padding: 10px;overflow-x: hidden;max-height: calc(100vh - 1px);overflow-y: hidden; position: relative;">
                
                 <div class="row" style="height: 95vh;">
                     <div class="col-lg-4" style="background: var(--bs-list-group-active-border-color); ">
@@ -229,7 +229,9 @@
 
                     </div>
                 </div>
-
+                <div style="position: absolute; bottom: 0; left: 0; text-align: center; width: 100%;">
+                    <p><strong>Cheetah Research</strong> es una marca registrada de <strong>Marketing Total S.A.</strong>. Todos los derechos reservados.</p>
+                </div>
             </div>
         </div>
     </div>
