--- a/Modulo De config/VisualizacionDeResultado.html
+++ b/Modulo De config/VisualizacionDeResultado.html
@@ -229,7 +229,7 @@
 
                     </div>
                 </div>
-                <div style="position: absolute; bottom: 0; left: 0; text-align: center; width: 100%;">
+                <div style="position: absolute; bottom: 0; left: 0; text-align: center; width: 100%; margin-top: 10px;">
                     <p><strong>Cheetah Research</strong> es una marca registrada de <strong>Marketing Total S.A.</strong>. Todos los derechos reservados.</p>
                 </div>
             </div>
