--- a/Modulo De config/CreacionDeEstudio.html
+++ b/Modulo De config/CreacionDeEstudio.html
@@ -76,12 +76,17 @@
         
         </nav>
 
-        <div class="d-flex flex-column" id="content-wrapper">
+        <div class="d-flex flex-column" id="content-wrapper" style="position: relative;">
             <div class="card" id="contentCard_PaginaOverview" style="margin: 0px;height: calc(100vh - 1px);padding: 10px;overflow-x: hidden;overflow-y: scroll;border-radius: 2px; background-color: #e4e4e4;">
                 <div id="form-containerStudy">
 
                 </div>
             </div>
+
+            <div style="position: absolute; bottom: 0; left: 0; text-align: center; width: 100%;">
+                <p><strong>Cheetah Research</strong> es una marca registrada de <strong>Marketing Total S.A.</strong>. Todos los derechos reservados.</p>
+            </div>
+
         </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
