--- a/Modulo De config/InformacionDelEstudio.html
+++ b/Modulo De config/InformacionDelEstudio.html
@@ -72,7 +72,7 @@
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
-                <div class="card" id="contentCard_PaginaOverview" style="margin: 0px;height: calc(100vh - 0px);padding: 10px;overflow-y: scroll;">
+                <div class="card" id="contentCard_PaginaOverview" style="margin: 0px;height: calc(100vh - 0px);padding: 10px;overflow-y: scroll; position: relative;">
                     <h2 style="color: var(--bs-emphasis-color);font-weight: bold;font-family: hedliner;">Transcripción de Encuestas</h2>
                     <div class="p-3 p-xl-4" style="font-family: hedliner;">
                         <div class="d-xxl-flex justify-content-xxl-start align-items-xxl-end" style="width: 25%;margin-top: 10px;font-family: hedliner;">
@@ -82,7 +82,11 @@
                             <button class="btn btn-primary d-block w-100" id="DescargarTranscrptBtnBckup" style="font-weight: bold;font-size: 20px;border-top-left-radius: 10px;border-top-right-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;margin-right: 10px;margin-bottom: 10px;font-family: hedliner;">Descargar Transcripciones No Procesadas</button>
                         </div>
                     </div>
-                </div>                
+                    <div style="position: absolute; bottom: 0; left: 0; text-align: center; width: 100%; margin-top: 10px; margin-bottom: -5px;">
+                        <p><strong>Cheetah Research</strong> es una marca registrada de <strong>Marketing Total S.A.</strong>. Todos los derechos reservados.</p>
+                    </div>  
+                </div>  
+                            
             </div>
         </div>
     </div>
