Copiright legend numero dos, la sequela

--- a/Recolección de Datos/Chat.html
+++ b/Recolección de Datos/Chat.html
@@ -116,7 +116,7 @@
                 </div>
             </div>
         </div>
-        <div class="row text-wrap justify-content-center align-items-center align-content-center order-4" id="Copyright-Legend" style="margin-top: 5px;margin-bottom: -10px;text-align: center;width: 100%;color: var(--bs-CR-white)">
+        <div class="row text-wrap justify-content-center align-items-center align-content-center order-4" id="Copyright-Legend" style="margin-top: 5px;text-align: center;width: 100%;color: var(--bs-CR-white)">
             <p><strong>Cheetah Research</strong> es una marca registrada de <strong>Marketing Total S.A.</strong>. Todos los derechos reservados.</p>
         </div>
     </div>
