un  monton de cosillas, probando cambiar status

--- a/Modulo Analisis De Datos/Overview.html
+++ b/Modulo Analisis De Datos/Overview.html
@@ -34,6 +34,8 @@
 
 <body onload="initializePage()" id="page-top">
     <div id="wrapper">
+    <div id="overlay" style="display: flex;"></div>
+
         <nav class="navbar d-lg-flex d-xl-flex d-xxl-flex align-items-lg-end align-items-xxl-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark" style="border-top-right-radius:0px;border-bottom-right-radius: 0px;background: var(--bs-CR-black-dark);">
             <div class="container-fluid d-flex flex-column p-0">
                 <a id="home-link" class="navbar-brand d-xxl-flex align-items-center justify-content-xxl-center align-items-xxl-center sidebar-brand m-0" href="#" >
